[package]

name = "rovr"
version = "0.0.2"
description = "A VR headset library for Rust programs targeting the Oculus Rift."
authors = ["Ryan Stewart <ryan@binsoftware.com>"]
repository = "https://github.com/binsoftware/rovr"
documentation = "http://binsoftware.github.io/rovr/doc/rovr"
license = "MIT"
keywords = ["vr", "ovr", "oculus", "rift", "hmd"]

[features]
default = ["glutin"]

[dependencies]
bitflags = "0.1.1"
libc = "0.1.5"

[dependencies.glutin]
version = "^0.1"
optional = true

[target.i686-pc-windows-gnu.dependencies]
winapi = "0.1.17"
kernel32-sys = "0.1.0"

[target.x86_64-pc-windows-gnu.dependencies]
winapi = "0.1.17"
kernel32-sys = "0.1.0"

[dev-dependencies.glium]
version = "^0.3"
default-features = false
features = ["gl_read_buffer", "gl_depth_textures"]

[dev-dependencies.cgmath]
version = "^0.2"
